fixed one layout issue

--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -43,7 +43,7 @@ a:link {
     background-size: 384px 216px;
 }
 
-a:visited {
+a:visited, a {
     color: white;
 }
 
